<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/icons"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/usericon"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="35sp"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableRight="@drawable/ic_baseline_person_24"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_baseline_email_24"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_baseline_lock_24"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/phone_number"
            android:drawableRight="@drawable/ic_baseline_phone_24"
            android:inputType="phone"
            android:padding="15dp"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/address"
            android:drawableRight="@drawable/ic_baseline_house_24"
            android:inputType="textImeMultiLine"
            android:padding="15dp"
            android:textSize="24sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/roundbtn"
            android:padding="15dp"
            android:text="@string/register"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"

            android:text="@string/loginhere"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="20dp" />

    </LinearLayout>

</LinearLayout>