<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/icons"
        android:padding="50dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/usericon"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/primary_text"

            android:textSize="45sp"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/email"
            android:drawableRight="@drawable/ic_baseline_email_24"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/divider"
            android:textColorHint="@color/divider"
            android:textColorLink="@color/teal_200"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_baseline_lock_24"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/divider"
            android:textColorHint="@color/divider"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundbtn"
            android:padding="15dp"
            android:text="@string/login"
            android:textSize="25sp"/>


        <TextView
            android:id="@+id/registerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"

            android:text="@string/registerhere"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="20dp" />


    </LinearLayout>

</LinearLayout>